# Engram

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml  sbom.yml
debates/019-compost-integration-implementation/: context.md  synthesis.md
debates/019-compost-integration-implementation/rounds/: r001_codex.md  r001_opus.md  r001_sonnet.md
debates/020-phase3-priority/: context.md  synthesis.md
debates/020-phase3-priority/rounds/: r001_claude.md  r001_codex.md  r001_gemini.md  r001_sonnet.md
docs/: baseline-comparison-2026-04-30.md  non-exposed-schema-fields.md  v3.3-migration-plan.md
hooks/: README.md  session_start.sh  user_prompt_submit.sh
src/engram/: __init__.py  cli.py  db.py  model.py  proactive.py  server.py  store.py
src/engram/migrations/: 001_slice_a_schema.sql  002_slice_b_compost_integration.sql  003_compost_insight_idempotency.sql
tests/: test_api_surface_coverage.py  test_architecture_invariants.py  test_cli.py  test_cli_export_stream.py  test_compost_insight_dedup.py  test_compost_insight_sources.py  test_expiry_coverage.py  test_invalidate_compost_fact.py  test_mcp.py  test_model.py  test_proactive.py  test_recall_miss_log.py  test_store.py  test_stream_entries.py  test_stream_for_compost.py
