[project]
name = "engram"
version = "0.1.0"
description = "Human-brain-like memory system for AI coding agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
engram = "engram.cli:main"
engram-server = "engram.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
